# unicode

./: .gitignore  collect.py  main.py  pyproject.toml  total_data.json
raw_data/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  42.json  43.json  44.json  45.json  (+57 more)
web/: .gitignore  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.app.json  vite.config.ts
web/src/: App.svelte  Router.svelte  app.scss  interfaces.d.ts  main.ts  router.ts
web/src/assets/: total_data.json
web/src/data/: bookdata.ts  data.ts  mapping.ts
web/src/lib/: Complete.svelte  Counter.svelte  DebugDisplay.svelte  data.ts
web/src/pages/: About.svelte  AllCharacters.svelte  Dynamic.svelte  Home.svelte
