[project]
name = "unicode"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Winkler",email = "git@lw1.at"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf (>=1.25.1,<2.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
